# GenA

./: .gitignore  .gitlab-ci.yml  GenA_example_question_dataset(rus-eng translation).xlsx  LICENSE  README.md  chunker.py  docker-compose.yaml  docx2json_outline.py  env.example  gen_env.sh  test_weighted_and_gate.py
agent_api/: Dockerfile  agent_api.py  config.py  llm_factory.py  models_registry.py  requirements.txt
chunker/: Dockerfile  README.md  docx2json_outline.py  main.py  requirements.txt  test_api.py  test_chunker.py  test_footnotes.py  test_garant_bold_articles.py  test_pdf_footnotes.py  test_question_generation.py  возможные_паттерны_для_очистки.json
config/: llm_defaults.env
dataset_api/: Dockerfile  auth_router.py  auth_utils.py  config.py  dataset_api.py  requirements.txt
gena_frontend/: .env.example  Dockerfile  MIGRATION_NOTES.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
gena_web/: Dockerfile  LICENSE  README.md  pyproject.toml
gena_web/docs/: Family_code_Russian_Federation_1-4.docx
gena_web/gena/: __init__.py  app.py  config.py  http.py  login.py  validation_display.py
gena_web/gena/.streamlit/: config.toml
gena_web/gena/controllers/: dynamic_implementation_controller.py
gena_web/gena/views/: __init__.py  bot.py  dataset_editor.py  docs.py  dynamic_implementation.py  home.py  queue_manager.py  statistics.py
scripts/: ci_integration_test.py  ci_integration_test.sh  ci_smoke_endpoints.sh  ci_test_chunker.py  ci_test_chunker.sh  (+1 more)
(+105 files in other folders)
